# crypto-ui

./: LICENSE  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: basedir.rs  main.rs  models.rs  routes.rs  standard.rs  tauri_commands.rs
src-tauri/src/core/: address.rs  mod.rs  transaction.rs  utxo.rs
src-tauri/src/crypto/: aes.rs  mod.rs
src-tauri/src/crypto/public_key/: mod.rs
src-tauri/src/wallet/: key_chain.rs  mod.rs  wallet_info.rs  wallet_security.rs
src/components/: DynamicStringList.tsx  Navbar.tsx  QRCode.tsx  ReceiveCrypto.tsx  SendCrypto.tsx  SendCryptoQR.tsx  Title.tsx  Transactions.tsx  Wallet.tsx
src/pages/: AddWallet.tsx  Home.tsx  OpenWallet.tsx  Receive.tsx  Send.tsx  SendQR.tsx
src/styles/: AddWallet.css  HoverButton.css  OpenWallet.css
