[package]
name = "crypto-ui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crypto-hash = "0.3.4"
blake3 = "1.5.4"
p256 = "0.13.2"
base58 = "0.2.0"
rand_core = "0.6.4"
rand = "0.8.5"
anyhow = "1.0.87"
lazy_static = "1.5.0"
ring = "0.17.8"
aes-gcm = "0.10.3"
bincode =  "1.3.3"
hex = "0.4.3"
reqwest = "0.12.8"
regex = "1.11.1"
chronos = "0.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
